# Vitarca_Demo

./: .gitignore  CMakeLists.txt  Game Design Document.docx  README.md
Coursework/: BGSpriteLoader.cpp  BGSpriteLoader.h  CanBot.cpp  CanBot.h  Crate.cpp  Crate.h  Enemy.cpp  Enemy.h  GameManager.cpp  GameManager.h  Keys.cpp  Keys.h  Player.cpp  Player.h  button.cpp  button.h  game.h  main.cpp  scene.h  soundManager.cpp  soundManager.h
Coursework/components/: cmp_actor_movement.cpp  cmp_button.cpp  cmp_button.h  cmp_camera.cpp  cmp_camera.h  cmp_canbot_physics.cpp  cmp_canbot_physics.h  cmp_crate_physics.cpp  cmp_crate_physics.h  cmp_enemy_physics.cpp  cmp_enemy_physics.h  cmp_physics.cpp  cmp_physics.h  cmp_player_physics.cpp  cmp_player_physics.h  cmp_sprite.cpp  cmp_sprite.h
Coursework/scenes/: pause.cpp  pause.h  scene.h  scene_controls.cpp  scene_controls.h  scene_level1.cpp  scene_level1.h  scene_level2.cpp  scene_level2.h  scene_level3.cpp  scene_level3.h  scene_level4.cpp  scene_level4.h  scene_level5.cpp  scene_level5.h  scene_level6.cpp  scene_level6.h  scene_level7.cpp  scene_level7.h  scene_level_select.cpp  scene_level_select.h  scene_menu.cpp  scene_options.cpp  scene_options.h  scene_res.cpp  scene_res.h  scene_splash.cpp  scene_splash.h  scene_tracker.cpp  scene_tracker.h  scene_volume.cpp  scene_volume.h
lib/b2d/Box2D/Box2D/Dynamics/: b2Body.h
lib_ecm/: ecm.cpp  ecm.h
lib_engine/: engine.cpp  engine.h  system_physics.cpp  system_physics.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h  MyLevelSystem.cpp  MyLevelSystem.h
res/: LevelReadme.txt  level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt
